--- a/assets/css/tlogin.css
+++ b/assets/css/tlogin.css
@@ -63,31 +63,6 @@ section{
   padding: 0.5rem 1rem;
 }
 
-.urgent{
-    color: var(--primary)!important;
-    background-color: var(--dark)!important;
-    padding: 5px 20px !important;
-    margin-right: 10px;
-}
-
-.urgent:hover{
-  background-color: var(--light) !important;
-}
-
-.urgent_div{
-  display: flex !important;
-  justify-content: center !important;
-  align-items: center !important;
-  gap: 10px;
-}
-
-.urgent_div p {
-  color: var(--secondary);
-  font-size: 1.3rem !important;
-  letter-spacing: 1px;
-  margin: 0;
-  line-height: 1;
-}
 
 main{
   display: flex;
@@ -252,7 +227,7 @@ label{
 
 @media screen and (max-width: 575px) {
   .navbar-brand p{
-    display: none;
+    font-size: 1.4rem;
   }
 
   .form_cont{
@@ -290,6 +265,10 @@ label{
 }
 
 .password_div{
+  position: relative;
+}
+
+.cpassword_div{
   position: relative;
 }
 
