--- a/assets/css/tsignup.css
+++ b/assets/css/tsignup.css
@@ -12,6 +12,7 @@ body, html {
   padding: 0;
   height: 100vh;
   font-family: "Poppins", sans-serif;
+  overflow: hidden;
 }
 
 section{
@@ -44,16 +45,17 @@ section{
 }
 
 .navbar-brand img {
-  width: 65px !important;
+  width: 35px !important;
   height: auto;
 }
 
 .navbar-brand p{
   color: var(--secondary) !important;
   letter-spacing: 3px;
-  font-size: 2rem;
+  font-size: 1.8rem;
   font-weight: 600;
   padding-top: 8px;
+  margin-left: 10px;
 }
 
 .btn {
@@ -64,14 +66,12 @@ section{
 
 main{
   display: flex;
-  
-}
 
+}
 
 .colored{
   color: var(--light);
 }
-
 
 .details{
   margin-left: 20px;
@@ -81,6 +81,7 @@ main{
   align-items: start;
   text-align: left;
   width: 500px;
+  padding-bottom: 15px;
 }
 
 .form_cont p{
@@ -91,7 +92,7 @@ main{
 .form_cont h6{
   color: var(--light);
   font-size: 1.4rem;
-  font-weight: 600;
+  font-weight: 600;             
   letter-spacing: 1px;
 }
 
@@ -103,6 +104,7 @@ main{
 .form_cont a{
   text-decoration: none;
   color: var(--mid);
+  font-size: 1.2rem;
 }
 
 .form{
@@ -119,8 +121,6 @@ main{
   flex-direction: column !important;
   justify-content: center;
   align-items: start;
-
-
   background: rgba(255, 255, 255, 0.1) !important; 
   border-radius: 15px;
   padding: 2rem;
@@ -171,14 +171,13 @@ label{
 }
 
 
-
 #typedText {
   color: var(--mid);
-  font-size: 1.5rem;
+  font-size: 1.5em;
   font-family: 'Poppins', sans-serif;
   text-align: center;
   position: absolute;
-  top: 20%;
+  top: 15%;
   left: 50%;
   transform: translateX(-50%);
   white-space: nowrap;
@@ -195,7 +194,6 @@ label{
   justify-content: center;
   align-items: center;
   color: var(--dark);
-  padding: 0 1rem;
   text-align: center;
 } 
 
@@ -215,10 +213,7 @@ label{
 
 
 @media screen and (max-width: 765px) {
-
-  .urgent_div p {
-    display: none;
-  }
+  
 
   #typedText {
     font-size: 1.2rem;
@@ -228,8 +223,9 @@ label{
 
 
 @media screen and (max-width: 575px) {
+
   .navbar-brand p{
-    font-size: 1.5rem;
+    font-size: 1.4rem;
   }
 
   .form_cont{
@@ -262,10 +258,6 @@ label{
   }
 }
 
-
-
-
-
 .email_div{
   position: relative;
 }
@@ -281,12 +273,12 @@ label{
     top: 55%;
     cursor: pointer;
     font-size: 16px;
-    color: #555;
+    color: var(--light);
     transition: color 0.3s;
 }
 
 .eye-icon:hover {
-    color: #000;
+    color: var(--dark);
 }
 
 
@@ -296,8 +288,12 @@ label{
   top: 50%;
   cursor: pointer;
   font-size: 16px;
-  color: #555;
+  color: var(--light);
   transition: color 0.3s;
+}
+
+.mail_icon:hover{
+    color: var(--dark);
 }
 
 
