--- a/assets/css/tforgot-password.css
+++ b/assets/css/tforgot-password.css
@@ -63,31 +63,6 @@ section{
   padding: 0.5rem 1rem;
 }
 
-.urgent{
-    color: var(--primary)!important;
-    background-color: var(--dark)!important;
-    padding: 5px 20px !important;
-    margin-right: 10px;
-}
-
-.urgent:hover{
-  background-color: var(--light) !important;
-}
-
-.urgent_div{
-  display: flex !important;
-  justify-content: center !important;
-  align-items: center !important;
-  gap: 10px;
-}
-
-.urgent_div p {
-  color: var(--secondary);
-  font-size: 1.3rem !important;
-  letter-spacing: 1px;
-  margin: 0;
-  line-height: 1;
-}
 
 main{
   display: flex;
@@ -95,9 +70,8 @@ main{
 }
 
 .colored{
-  color: var(--secondary);
+  color: var(--light);
 }
-
 
 .form_cont p{
   color: var(--light);
@@ -107,7 +81,8 @@ main{
 .form_cont h6{
   color: var(--light);
   font-size: 1.4rem;
-  font-weight: 400;             
+  
+               
   letter-spacing: 1px;
   text-align: center;
 }
@@ -127,6 +102,7 @@ main{
 .form{
   margin-top: 100px;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
 }
@@ -135,8 +111,8 @@ main{
   width: 700px;
   display: flex;
   flex-direction: column !important;
-  justify-content: center !important;
-  align-items: center !important;
+  justify-content: center;
+  align-items: start;
   background: rgba(255, 255, 255, 0.1) !important; 
   border-radius: 15px;
   padding: 2rem;
@@ -144,59 +120,25 @@ main{
   backdrop-filter: blur(15px) !important; 
   -webkit-backdrop-filter: blur(10px); 
   border: 1px solid rgba(255, 255, 255, 0.18) !important;
-} 
+}
 
 form{
   max-width: 100%;
 }
 
-
-
-.inputs-div {
-    display: flex !important;
-    flex-direction: row !important;
-    justify-content: space-evenly !important;
-    align-items: center !important;
-    text-align: center;
-    gap: 1rem;
-    width: 100%;
-    margin-bottom: 30px;
+.form-control{
+  background-color: transparent;
+  color: var(--secondary) !important;
+  border: solid 2px var(--light);
+  height: 45px !important;
+  width: 100%;
+  font-size: 1.4rem;
 }
 
-.inputs-div input, select {
-   width: 15%;
-   height: 115px;
-   border: solid var(--light) 3px;
-   border-radius: 10px;
-   font-size: 40px;
-   font-weight: 600;
-   text-align: center;
-   color: var(--dark);
-   background-color: var(--primary);
+label{
+  font-size: 1.4rem;
+  color: var(--secondary) !important;
 }
-
-
-.inputs-div input:focus, select:focus {
-    border: solid var(--dark) 3px;
-}
-
-
-.clear-btn{
-    padding: 5px 20px !important;
-    border: solid var(--light) 2px !important;
-    font-weight: 600 !important;
-    color: var(--light);
-}
-
-.clear-btn:hover{
-    border: solid var(--light) 2px !important;
-    background-color: var(--light) !important;
-    color: var(--primary);
-}
-
-
-
-
 
 .submit{
   background-color: var(--dark);
@@ -244,7 +186,7 @@ form{
 
 @media screen and (max-width: 575px) {
   .navbar-brand p{
-    display: none;
+    font-size: 1.4rem;
   }
 
   .form_cont{
@@ -276,7 +218,24 @@ form{
   }
 }
 
+.email_div{
+  position: relative;
+}
 
+
+.mail_icon{
+  position: absolute;
+  right: 10px;
+  top: 50%;
+  cursor: pointer;
+  font-size: 16px;
+  color: var(--light);
+  transition: color 0.3s;
+}
+
+.mail_icon:hover{
+    color: var(--dark);
+}
 
 
 
