--- a/assets/css/psignup.css
+++ b/assets/css/psignup.css
@@ -12,7 +12,7 @@ body, html {
   padding: 0;
   height: 100vh;
   font-family: "Poppins", sans-serif;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 section{
@@ -21,6 +21,7 @@ section{
   background-image: url("../../images/639f4c15ad4f90afa630803e745a543e213f21ff.jpg");
   background-repeat: no-repeat;
   background-size: cover;
+  padding-bottom: 30px;
 }
 
 
