--- a/questionnaire/area.css
+++ b/questionnaire/area.css
@@ -15,7 +15,6 @@ body, html {
   font-family: "Comfortaa", sans-serif;
   position: relative;
   z-index: 0;
-  overflow-x: hidden;
 }
 
 
@@ -71,107 +70,163 @@ body, html {
 }
 
 
-.urgent{
-    color: white ;
-    font-weight: 500;
-    background: linear-gradient(71deg,rgb(218, 99, 158) 0%, rgb(218, 51, 131) 100%);
-    padding: 5px 20px !important;
-    margin-right: 10px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    gap: 10px;
-    border-radius: 50px;
-    transition: all 300ms ease-in-out !important;
-}
-
-.urgent:hover{
-  color: white;
-  padding: 5px 35px !important;
-  background: linear-gradient(180deg,rgb(203, 60, 131) 0%, rgb(194, 26, 107) 100%);
-}
-
-.urgent span{
+.logout{
+  border: solid 2px rgb(194, 26, 107);
+  font-size: 1rem !important;
+  padding: 0.2rem 1rem;
   transition: all 300ms ease-in-out !important;
 }
 
-.urgent:hover span{
-  transform: rotate(45deg);
-}
 
-.urgent_div{
-  display: flex !important;
-  justify-content: center !important;
-  align-items: center !important;
-  gap: 10px;
-}
-
-.urgent_div p {
+.logout:hover{
+  background: linear-gradient(180deg,rgb(203, 60, 131) 0%, rgb(194, 26, 107) 100%);
   color: white;
-  font-size: 1.3rem !important;
+  padding: 0.2rem 2rem;
+}
+
+
+.home{
+  padding-bottom: 30px;
+}
+
+
+.header h1{
+  font-family: 'Poppins', sans-serif !important;
+  font-weight: 800;
+}
+
+.header span{
+  color: rgb(218, 51, 131); 
+}
+
+.form-check {
+  padding: 10px 12px;
+  padding-left: 40px;
+  background-color: #f8f9fa;
+  border-radius: 15px;
+  transition: background 0.3s;
+  border: solid 1.5px rgb(57, 55, 55);
+  margin-bottom: 10px !important;
   letter-spacing: 1px;
-  margin: 0;
-  line-height: 1;
 }
 
-.login{
-  border: solid 2px rgb(194, 26, 107);
-  font-size: 1rem !important;
-  padding: 0.2rem 1rem;
+.form-check:hover {
+  background-color: #fdebf7;
+}
+
+
+.form-check-input {
+  width: 20px;
+  height: 20px;
+  border: 1.5px solid rgb(57, 55, 55);
+  border-radius: 50% !important;
+  background-color: #fff;
+  cursor: pointer;
+  transition: all 0.2s ease-in-out;
+  margin-top: -1px;
+}
+
+.form-check-input:checked {
+  background-color: rgb(203, 60, 131);
+  border-color: rgb(203, 60, 131);
+}
+
+.form-check-input:focus {
+  border: solid 1.5px pink !important;
+}
+
+.form-check-label {
+  margin-left: 8px;
+  font-weight: 500;
+  cursor: pointer;
+}
+
+.submit_btn {background-image: linear-gradient(to right, rgb(218, 51, 131) 0%, #f09ad4  51%, rgb(218, 51, 131)  100%)}
+.submit_btn {
+  display: flex !important;
+  align-items: center !important;
+  justify-content: center !important;
+  border: none;
+  font-size: 1.3rem !important;
+  color: white !important;
+  padding: 10px 10px !important;
+  border-radius: 25px !important;
+  transition: all 300ms ease-in-out !important;
+  gap: 10px;
+  background-size: 200% auto !important;          
+}
+
+.submit_btn:hover {
+  background-position: right center; 
+  color: #fff;
+  text-decoration: none;
+}
+
+.submit_btn span{
   transition: all 300ms ease-in-out !important;
 }
 
-.signup{
-  border: solid 2px rgb(194, 26, 107);
-  font-size: 1rem !important;
-  padding: 0.2rem 1rem;
-  transition: all 300ms ease-in-out !important;
+.submit_btn:hover span{
+  transform: rotate(90deg);
 }
 
-.login:hover{
-  background: linear-gradient(180deg,rgb(203, 60, 131) 0%, rgb(194, 26, 107) 100%);
+
+
+footer{
+  background-color: #262626 !important;
+  text-align: center !important;
+  color: #a3a3a3 !important;
+}
+
+footer img{
+  height: 40px;
+  width: auto;
+}
+
+footer .logo{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap:10px;
+}
+
+footer .logo-cont{
+  display: flex;
+  flex-direction: column;
+  justify-content: left;
+  align-items: start;
+  gap: 8px;
+}
+
+footer .logo-cont h4{
   color: white;
-  padding: 0.2rem 2rem;
+  font-weight: 900;
+  padding-bottom: 8px;
 }
 
-.signup:hover{
-  background: linear-gradient(180deg,rgb(203, 60, 131) 0%, rgb(194, 26, 107) 100%);
-  color: white;
-  padding: 0.2rem 2rem;
+footer .service h5{
+  color: var(--blue);
+  font-weight: 900;
+  padding-bottom: 8px;
+}
+
+footer .support h5{
+  color: #86efac;
+  font-weight: 900;
+  padding-bottom: 8px;
+}
+
+footer .contact h5{
+  color: #dba5e0;
+  font-weight: 900;
+  padding-bottom: 10px;
+}
+
+footer li{
+  padding-bottom: 7px;
 }
 
 
-
-.white{
-  background-color: rgba(255, 255, 255, 0.9);
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: -2;
-}
-
-.hands {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-  z-index: -3;
-}
-
-.hands img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: -3;
-}
 
 
 
