Therapist and Victim Hom Page

--- a/questionnaire/help.css
+++ b/questionnaire/help.css
@@ -1,4 +1,426 @@
+:root{
+    --light-pink: #c9608e;
+    --pink: #bd3470;
+    --dark-pink: #80316e;
+    --color-white: #ffffff;
+    --font-black: #323842;
+    --color-light: rgba(114, 121, 182, 0.18);
+    --color-background: #e6e6eb;
+    --color-info-dark: #7d8da1;
+    --color-info-light: #dce1eb;
+    --color-dark: #363949;
+    --color-primary: #333333;
+    --color-dark-varient: #677483;
 
+    --green: rgb(22, 147, 68);
+    --blue: #0ea5e9;
+    --pink: #db2777;
+
+    --pop: 'Poppins', sans-serif;
+}
+
+
+*{
+    margin: 0 !important;
+    padding: 0 !important;
+    outline: 0 !important;
+    appearance: none !important;
+    border: 0 !important;
+    text-decoration: none !important;
+    list-style: none !important;
+    box-sizing: border-box !important;
+}
+
+body{
+    font-family: "Comfortaa", sans-serif;
+    width: 100vw !important;
+    height: 100vh !important;
+    background: #e6e6eb;
+    overflow-x: hidden !important;
+    color: #262626;
+    
+}
+
+.containerss{
+    display: grid !important;
+    width: 96% !important;
+    margin: 0 auto !important;
+    gap: 1.8rem !important;
+    grid-template-columns: 17rem auto !important;
+}
+
+
+.logo-span{
+    color: var(--pink);
+}
+
+a{
+    color: var(--font-black);
+}
+
+img{
+    display: block !important;
+    width: 100%;
+}
+
+h1{
+    font-weight: 800;
+    font-size: 1.8rem;
+}
+
+h2{
+    font-size: 1.4rem;
+}
+
+h3{
+    font-size: 0.97rem;
+}
+
+h4{
+    font-size: 0.8em;
+}
+
+h5{
+    font-size: 0.77;
+}
+
+small{
+    font-size: 0.75rem;
+}
+
+.profile-photo{
+    width: 3.2rem;
+    height: 3.2rem;
+    border-radius: 50%;
+    overflow: hidden !important;
+}
+
+.text-muted{
+    color: var(--color-info-dark);
+}
+
+p{
+    color: var(--color-dark-varient);
+}
+
+b{
+    color: var(--color-dark);
+}
+ 
+
+aside{
+    height: 100vh !important;
+}
+
+
+
+aside .top{
+    display: flex !important ;
+    align-items: center!important;
+    justify-content: space-between !important;
+    margin-top: 1.4rem !important;
+    position: relative!important;
+}
+
+aside .logo{
+    display: flex !important;
+    gap: 0.8rem !important;
+    align-items: center !important;
+    justify-content: center !important;
+}
+
+aside .logo h2{
+    color: var(--color-dark);
+    font-weight: 900;
+    font-size: 1.55rem;
+}
+
+aside .logo img{
+    width: 2.5rem;
+    height: 2.5rem;
+}
+
+aside .close{
+    display: none;
+}
+
+aside .sidebar{
+    display: flex !important ;
+    flex-direction: column !important ;
+    height: 86vh !important;
+    position: relative !important;
+    top: 4.2rem !important;
+    gap: 7px !important;
+}
+
+aside h3{
+    font-weight: 600;
+}
+
+aside .sidebar a{
+    display: flex !important;
+    color: var(--color-info-dark) !important;
+    margin-left: 2rem !important;
+    gap: 1rem !important;
+    align-items: center !important;
+    position: relative !important;
+    height: 4.2rem !important ;
+    transition: all 300ms ease;
+}
+
+aside .sidebar a span{
+    font-size: 1.6rem ;
+    transition: all 300ms ease;
+}
+
+aside .sidebar a:last-child{
+    position: absolute !important;
+    bottom: 4rem !important;
+    width: 100% !important;
+    color: var(--pink);
+}
+
+aside .sidebar a:last-child h3{
+    font-weight: 800 !important;
+}
+
+aside .sidebar a:last-child:hover{
+    color: var(--dark-pink);
+}
+
+aside .sidebar a:hover span{
+    margin-left: 1rem !important; 
+}
+
+aside .sidebar a.active{
+    background: var(--color-light);
+    color: var(--color-dark);
+    margin-left: 0 !important;
+}
+
+aside .sidebar a.active::before{
+    content: '' !important;
+    width: 6px !important;
+    height: 100% !important;
+    background-color: var(--color-dark);
+}
+
+aside .sidebar a.active span{
+    color: var(--color-dark);
+    margin-left: calc(1rem - 3px) !important;
+}
+
+aside .sidebar a:hover{
+    color: var(--color-dark);
+}
+
+aside .sidebar a:hover span{
+    margin-left: 1rem !important;
+}
+
+aside .sidebar .notification-count{
+    background: var(--pink);
+    color: #ffffff;
+    padding: 2px 10px !important;
+    font-size: 11px !important;
+    border-radius: var(--border-radius-1) !important;
+}
+ 
+
+main{
+    display: grid !important;
+    width: 100% !important;
+    margin: 0 auto !important;
+    grid-template-rows: 8rem auto !important;
+}
+
+.main_head{
+    display: flex !important;
+    align-items: center !important;
+    justify-content: space-between !important;
+}
+
+.profile_info{
+    display: flex !important;
+    gap: 12px !important;
+    justify-content: center !important;
+    align-items: center !important;
+    margin-right: 20px !important;
+}
+
+
+.profile_info p{
+    font-weight: 900;
+    font-size: 1.2rem;
+
+}
+
+.profile_info button{
+    background-color: transparent;
+    cursor: pointer;
+    margin-left: -7px !important;
+}
+
+
+.main_head .cta_button a p{
+    font-size: 1.1rem;
+    color: white;
+    font-weight: 500;
+    font-family: "Comfortaa", sans-serif;
+}
+
+.main_head .cta_button a span{
+    color: white;
+}
+
+
+.main_head .cta_button a {background-image: linear-gradient(to right, rgb(198, 30, 111) 0%, #e463ac  51%, rgb(198, 30, 111)  100%)}
+.main_head .cta_button a {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 12px;
+    padding: 8px;
+    border-radius: 18px;
+    height: 3rem;
+    width: 16rem;
+    gap: 10px;
+    border: none;
+    transition: all 300ms ease-in-out;
+    transition: 0.5s;
+    background-size: 200% auto;
+}
+
+.main_head .cta_button a:hover {
+    background-position: right center; 
+}
+     
+
+.hero_cont{
+    width: 97% !important;
+    height: 97% !important;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
+    display: flex !important;
+    flex-direction: column !important;
+    justify-content: center !important; 
+    align-items: center !important;
+    padding-bottom: 30px !important;
+    /* background: radial-gradient(circle,#caaee5 0%, #fc9bc8 100%); */
+}
+
+
+.header h1{
+  font-family: 'Poppins', sans-serif !important;
+  font-weight: 800;
+}
+
+.header span{
+  color: rgb(218, 51, 131); 
+}
+
+.main_form{
+    /* background-color: transparent !important; */
+    padding: 20px !important;
+    border-radius: 25px !important;
+    margin-bottom: 30px !important;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px !important;
+}
+
+.form-check {
+  padding: 10px 12px  !important;
+  padding-left: 40px !important ;
+  background-color: #f8f9fa; 
+  border-radius: 15px !important;
+  transition: background 0.3s !important;
+  border: solid 1.5px rgb(57, 55, 55) !important;
+  margin-bottom: 10px !important;
+  letter-spacing: 1px !important;
+  width: 300px;
+}
+
+.form-check:hover {
+  background-color: #fdebf7;
+}
+
+
+.form-check-input {
+  width: 20px !important;
+  height: 20px !important;
+  border: 1.5px solid rgb(57, 55, 55) !important;
+  border-radius: 50% !important;
+  background-color: #fff;
+  cursor: pointer !important;
+  transition: all 0.2s ease-in-out !important ;
+  margin-top: -1px !important;
+}
+
+.form-check-input:checked {
+  background-color: rgb(203, 60, 131) ;
+  border-color: rgb(203, 60, 131);
+}
+
+.form-check-input:focus {
+  border: solid 1.5px pink !important;
+}
+
+.form-check-label {
+  margin-left: 8px !important;
+  font-weight: 500 !important ;
+  cursor: pointer;
+}
+
+
+
+
+.submit_btn {background-image: linear-gradient(to right, rgb(218, 51, 131) 0%, #f09ad4  51%, rgb(218, 51, 131)  100%)}
+.submit_btn {
+  display: flex !important;
+  align-items: center !important;
+  justify-content: center !important;
+  border: none!important;
+  font-size: 1.3rem !important;
+  color: white !important;
+  padding: 10px 10px !important;
+  border-radius: 25px !important;
+  transition: all 300ms ease-in-out !important;
+  gap: 10px !important;
+  background-size: 200% auto !important;          
+}
+
+.submit_btn:hover {
+  background-position: right center !important; 
+  color: #fff;
+  text-decoration: none;
+}
+
+.submit_btn span{
+  transition: all 300ms ease-in-out !important;
+}
+
+.submit_btn:hover span{
+  transform: rotate(90deg);
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* 
     :root{
         --primary: #E0E1DD;
         --secondary: #0D1B2A ;
@@ -177,4 +599,4 @@
 
 
 
-
+ */
